# mtokenizers

./: .gitignore  Cargo.toml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  tokenizers.rs
src/tokenizers/: chartokenizer.rs  latin1.rs
tests/: test_latin1.py
