[build-system]
requires = ["maturin>=1.0,<2.0", "nox"]
build-backend = "maturin"

[project]
name = "mtokenizers"
version = "0.1.0"
authors = [
  { name="Marcelo Tournier", email="dr.tournier@gmail.com" },
]
description = "Fast tokenizers for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest < 5.0.0",
    ]


[tool.maturin]
features = ["pyo3/extension-module"]
